objects/Account_Executive_Sponsor_Mertics__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive_Sponsor__c</fullName>
        <description>Account Executive Sponsor</description>
        <label>Account Executive Sponsor</label>
        <referenceTo>Account_Executive_Sponsor__c</referenceTo>
        <relationshipLabel>Account Executive Sponsor Mertics</relationshipLabel>
        <relationshipName>Account_Executive_Sponsor_Mertics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Sponsor_Met_with_Custo__c</fullName>
        <description>How many times did the Additional Executive Sponsor engage with the CUSTOMER in the previous six (6) months?</description>
        <inlineHelpText>How many times did the Additional Executive Sponsor engage with the CUSTOMER in the previous six (6) months?</inlineHelpText>
        <label>#Additional Sponsor Met with Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 Times</fullName>
                </value>
                <value>
                    <fullName>1-4 Times</fullName>
                </value>
                <value>
                    <fullName>5-10 Times</fullName>
                </value>
                <value>
                    <fullName>10 or more times</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_of_Customer_Additional_Sponsor__c</fullName>
        <description>What is the health of the relationship between your Additional Executive Sponsor and your CUSTOMER?</description>
        <inlineHelpText>What is the health of the relationship between your Additional Executive Sponsor and your CUSTOMER?</inlineHelpText>
        <label>Health of Customer/Additional Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Established</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Not Established</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_of_Customer_Lead_Sponsor__c</fullName>
        <description>What is the health of the relationship between your Lead Executive Sponsor and your CUSTOMER?</description>
        <inlineHelpText>What is the health of the relationship between your Lead Executive Sponsor and your CUSTOMER?</inlineHelpText>
        <label>Health of Customer/Lead Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Established</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Not Established</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Sponsor_Met_with_Customer__c</fullName>
        <description>How many times did the Lead Executive Sponsor engage with the CUSTOMER in the previous six (6) months?</description>
        <inlineHelpText>How many times did the Lead Executive Sponsor engage with the CUSTOMER in the previous six (6) months?</inlineHelpText>
        <label>#Lead Sponsor Met with Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 Times</fullName>
                </value>
                <value>
                    <fullName>1-4 Times</fullName>
                </value>
                <value>
                    <fullName>5-10 Times</fullName>
                </value>
                <value>
                    <fullName>10 or more times</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metrics_Collected_Date__c</fullName>
        <description>Date when metrics was collected</description>
        <label>Metrics Collected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Metrics_Comments__c</fullName>
        <description>Metrics Comments</description>
        <label>Metrics Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <description>Feedback collected form Account Executive Sponsors</description>
    <label>Account Executive Sponsor Mertics</label>
    <nameField>
        <displayFormat>ESM-{0}</displayFormat>
        <label>Account Executive Mertics</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Executive Sponsor Mertics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>